Audio notification plumbed from guest WebContents up to embedder.

When a guest webcontents is playing audio, there is no way for an
entity interacting with the embedder webcontents to determine this.
This CL adds two things:
i) The ability for WebContentsImpl::WasRecentlyAudible() to query any
guest/child contents to determine if they were recently audible, and
ii) the ability for a guest webcontents to pass any navigation state
changes up to the embedder in order to make them visible at the top
level.

BUG=590656

Review-Url: https://codereview.chromium.org/1970313002
Cr-Commit-Position: refs/heads/master@{#393689}

Former-commit-id: 1dabf3e34c14d34d9fb262a54cd26c1878eb0034