content/browser/browser_plugin/browser_plugin_embedder.h
@@ -83,6 +83,10 @@ class CONTENT_EXPORT BrowserPluginEmbedder : public WebContentsObserver {
   // is returned.
   BrowserPluginGuest* GetFullPageGuest();
 
+  // Polls all guests for this web contents and returns true if any of them
+  // were audible recently.
+  bool WereAnyGuestsRecentlyAudible();
+
  private:
   explicit BrowserPluginEmbedder(WebContentsImpl* web_contents);
 
@@ -106,6 +110,8 @@ class CONTENT_EXPORT BrowserPluginEmbedder : public WebContentsObserver {
                           const blink::WebFindOptions& options,
                           WebContents* guest);
   static bool StopFindingInGuest(StopFindAction action, WebContents* guest);
+
+  static bool GuestRecentlyAudibleCallback(WebContents* guest);
 
   // Message handlers.
 
